@@ -1,3 +1,11 @@
+2001-08-26  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: connect to "close" signal for renice dialog.
+	Don't popup a new dialog if another already exists.
+
+	* favorites.c: again connect to "close" signal, and only
+	do gnome_dialog_close if the close button is pressed.
+
 2001-08-25  Kevin Vandersloot <kfv101@psu.edu>
 
 	Fix bug #59548 by only showing utf8 names for the e-tree
